[tool.poetry]
name = "dm_extracts"
version = "0.1.0"
description = ""
authors = ["Yevgeny Bulochnik <yevgeny.bulochnik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ipython = "^7.16.1"
scrapy = "^2.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
