[tool.poetry]
name = "dm_extracts"
version = "0.1.0"
description = ""
authors = ["Yevgeny Bulochnik <yevgeny.bulochnik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.16.1"
scrapy = "^2.2.1"
djangorestframework = "^3.11.1"
django-filter = "^2.3.0"
asgiref = "^3.2.10"
flake8 = "^3.8.3"
gunicorn = "^20.0.4"
django-cors-headers = "^3.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
